fix bug when gonna login but can see admin console in a flash

--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -8,7 +8,7 @@
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
 </head>
-<body class="navbar-fixed breadcrumbs-fixed">
+<body class="navbar-fixed breadcrumbs-fixed" ng-show="_isLogin">
 <div class="navbar navbar-default navbar-fixed-top" id="navbar">
     <div class="navbar-container" id="navbar-container">
         <div class="navbar-header pull-left">
