--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -69,6 +69,12 @@
                         <span class="menu-text">Posts</span>
                     </a>
                 </li>
+                <li ng-class="{active: isActive('/categories')}">
+                    <a href="#!/categories">
+                        <i class="icon-bookmark"></i>
+                        <span class="menu-text">Categories</span>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="main-content" ng-view></div>
