--- a/src/client/modules/404/index.html
+++ b/src/client/modules/404/index.html
@@ -1,15 +1,7 @@
 <div class="center">
-    <h1>
-        Page Not Found
-        <small>
-            <font face="Tahoma" color="red">Error 404</font>
-        </small>
-    </h1>
-    <br />
-    <p>The page you requested could not be found, either contact your webmaster or try again. Use your browsers <b>Back</b> button to navigate to the page you have prevously come from</p>
-    <p>
-        <b>Or you could just press this neat little button:</b>
-    </p>
+    <div>
+        <img src="img/404.jpg" class="img-responsive"/>
+    </div>
     <a href="#!" class="btn btn-large btn-info">
         <i class="icon-home icon-white"></i>
         Take Me Home
@@ -19,9 +11,13 @@
 <style>
     .center {
         text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: auto;
-        margin-top: auto;
+    }
+
+    .center > div {
+        margin-bottom: 20px;
+    }
+
+    .img-responsive {
+        margin: 0 auto;
     }
 </style>
