remove useless code; adjust html

--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -1,15 +1,14 @@
-<div>
-    <img src="img/home_bg.jpg" class="img-responsive" />
-</div>
-
-
 <style>
     body {
-        padding-top: 0px;
+        padding-top: 50px;
     }
     body > .container {
         max-width: 100%;
         width: 100%;
-        padding: 0px;
+        padding: 0;
     }
 </style>
+
+<div>
+    <img src="img/home_bg.jpg" class="img-responsive" />
+</div>
