keep footer at bottom of the page

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,19 +9,19 @@
     <!--STYLES--><!--STYLES END-->
 </head>
 <body>
-    <div ng-include="'shared/header.html'"></div>
-    <div class="container">
-        <div class="content">
-            <div ng-view></div>
+    <div id="main-container">
+        <div ng-include="'shared/header.html'"></div>
+        <div class="container" id="container">
+            <div class="content">
+                <div ng-view></div>
+            </div>
         </div>
-        <hr />
-    </div>
-    <footer>
-        <p>Copyright © 2014 <a href="http://coffeeholic.me" target="_blank">Coffeeholic</a>,
+        <footer>
+            Copyright © 2014 <a href="http://coffeeholic.me" target="_blank">Coffeeholic</a>,
             Powered by
             <a href="http://meanjs.org/" target="_blank">MEAN.JS</a>
-        </p>
-    </footer>
+        </footer>
+    </div>
     <div id="scrollTop" style="display: none; top: 95%;">
         <div class="level-2" style="opacity: 0;">
         </div>
