--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -2,10 +2,10 @@
     body {
         padding-top: 50px;
     }
-    body > .container {
+    body #container {
         max-width: 100%;
         width: 100%;
-        padding: 0;
+        padding: 0 0 40px;
     }
 </style>
 
