--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -2,13 +2,11 @@
     body {
         padding-top: 50px;
     }
-    body #container {
-        max-width: 100%;
-        width: 100%;
-        padding: 0 0 40px;
+    body #main-container {
+        background: url(img/home_bg.jpg) no-repeat center center fixed;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        -webkit-background-size: cover;
+        background-size: cover;
     }
 </style>
-
-<div>
-    <img src="img/home_bg.jpg" class="img-responsive" />
-</div>
