edit path of imgs

--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -14,7 +14,7 @@
         <div class="navbar-header pull-left">
             <a class="navbar-brand" href="#!/">
                 <small>
-                    <img src="img/logo.jpg"></img>
+                    <img src="/img/logo.jpg"></img>
                     Admin Console
                 </small>
             </a>
