--- a/src/client/modules/about/index.html
+++ b/src/client/modules/about/index.html
@@ -50,7 +50,7 @@
 
 <div class="about-page">
     <div>
-        <img src="img/runner.jpg">
+        <img src="/img/runner.jpg">
     </div>
     <p class="social-media well">
         <a href="https://www.facebook.com/houritsunohikari" target="_blank"><i class="icon-facebook-sign icon-3"></i></a>
