--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -3,7 +3,7 @@
         padding-top: 50px;
     }
     body #main-container {
-        background: url(img/home_bg.jpg) no-repeat center center fixed;
+        background: url(/img/home_bg.jpg) no-repeat center center fixed;
         -moz-background-size: cover;
         -o-background-size: cover;
         -webkit-background-size: cover;
