--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img src="img/logo.jpg"></img>
+                <img src="/img/logo.jpg"></img>
                 just4fun
             </a>
         </div>
