--- a/src/client/modules/404/index.html
+++ b/src/client/modules/404/index.html
@@ -1,6 +1,6 @@
 <div class="center">
     <div>
-        <img src="img/404.jpg" class="img-responsive"/>
+        <img src="/img/404.jpg" class="img-responsive"/>
     </div>
     <a href="#!" class="btn btn-large btn-info">
         <i class="icon-home icon-white"></i>
