avoid accessing login page if user has logged in

--- a/src/client/admin/admin-login.html
+++ b/src/client/admin/admin-login.html
@@ -8,7 +8,7 @@
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
 </head>
-<body class="login-layout">
+<body class="login-layout" ng-hide="_isLogin">
 <div class="container" id="login-block">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
