--- a/src/client/admin/admin-login.html
+++ b/src/client/admin/admin-login.html
@@ -25,7 +25,7 @@
                         {{error}}
                     </div>
                     <form name="form" ng-submit="login()">
-                        <input type="text" placeholder="Username" required ng-model="user.Username">
+                        <input type="text" placeholder="Username" required ng-model="user.UserName">
                         <input type="password" placeholder="Password" required ng-model="user.Password">
                         <button type="submit" class="btn btn-login" ng-disabled="submitting || form.$invalid">
                             Login
