--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img src="/img/logo.jpg"></img>
+                <img src="/img/logo.jpg"/>
                 just4fun
             </a>
         </div>
@@ -25,7 +25,7 @@
                     <a href="/login">Login</a>
                 </li>
                 <li ng-show="_loginUser">
-                    <a href="/admin">Hello, {{_loginUser.Username}}</a>
+                    <a href="/admin">Hello, {{_loginUser.UserName}}</a>
                 </li>
             </ul>
         </nav>
