--- a/src/client/modules/about/index.html
+++ b/src/client/modules/about/index.html
@@ -32,7 +32,7 @@
     }
 
     body {
-        padding-top: 50px;
+        padding-top: 0;
     }
     body #main-container {
         background: url(/img/marathon.jpg) no-repeat center center fixed;
