--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -1,6 +1,6 @@
 <style>
     body {
-        padding-top: 50px;
+        padding-top: 0;
     }
     body #main-container {
         background: url(/img/home_bg.jpg) no-repeat center center fixed;
