add IE detection; remove google font.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,11 @@
     <title>just4fun</title>
     <meta name="viewport" content="width=device-width" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <!--[if IE]>
+    <script>
+        alert("You are using IE! Please change it to Chrome or Firefox!!");
+    </script>
+    <![endif]-->
     <!--STYLES--><!--STYLES END-->
 </head>
 <body>
