fix a name conflict between profile dialog and user/category dialog

--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -110,7 +110,7 @@
     </a>
 </div>
 
-<div modal="iconDialog" close="close()" options="{backdrop: true,dialogFade:true}">
+<div modal="profileDialog" close="close()" options="{backdrop: true,dialogFade:true}">
     <div class="modal-dialog">
         <form name="form" class="modal-content" ng-submit="save()">
             <div class="modal-content">
