fix some little issues

--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -13,7 +13,7 @@
         </div>
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-class="{active: isActive('/posts')}">
+                <li ng-class="{active: isPostActive()}">
                     <a href="/#!/posts">Posts</a>
                 </li>
                 <li ng-class="{active: isActive('/about')}">
