--- a/src/client/admin/modules/users/index.html
+++ b/src/client/admin/modules/users/index.html
@@ -12,11 +12,12 @@
     <table class="table table-striped table-bordered table-hover" ng-show="users">
         <thead>
         <tr>
-            <td style="width: 25%">UserName</td>
-            <td style="width: 25%">Email</td>
+            <td style="width: 15%">UserName</td>
+            <td style="width: 20%">Email</td>
             <td style="width: 10%">Role</td>
             <td style="width: 15%">CreateDate</td>
             <td style="width: 15%">EditDate</td>
+            <td style="width: 15%">LastLoginDate</td>
             <td style="width: 10%"></td>
         </tr>
         </thead>
@@ -34,6 +35,7 @@
             </td>
             <td>{{item.CreateDate | date:'yyyy-MM-dd HH:mm'}}</td>
             <td>{{item.EditDate | date:'yyyy-MM-dd HH:mm'}}</td>
+            <td>{{item.LastLoginDate | date:'yyyy-MM-dd HH:mm'}}</td>
             <td>
                 <div class="action-buttons">
                     <a class="green" href="javascript:void(0);" ng-click="edit(item)" title="edit">
