improve css of 404 page

--- a/src/client/modules/404/index.html
+++ b/src/client/modules/404/index.html
@@ -1,14 +1,15 @@
-<div class="center">
-    <div>
-        <img src="/img/404.jpg" class="img-responsive"/>
-    </div>
-    <a href="#!" class="btn btn-large btn-info">
-        <i class="icon-home icon-white"></i>
-        Take Me Home
-    </a>
-</div>
-
 <style>
+    .navbar-inverse .navbar-brand,
+    .navbar-inverse .navbar-brand:hover,
+    .navbar-inverse .navbar-brand:focus ,
+    .navbar-inverse .navbar-nav > .active > a,
+    .navbar-inverse .navbar-nav > .active > a:hover,
+    .navbar-inverse .navbar-nav > .active > a:focus,
+    .navbar-inverse .navbar-nav > li > a:hover,
+    .navbar-inverse .navbar-nav > li > a:focus {
+        color: #428bca;
+    }
+
     .center {
         text-align: center;
     }
@@ -21,3 +22,13 @@
         margin: 0 auto;
     }
 </style>
+
+<div class="center">
+    <div>
+        <img src="/img/404.jpg" class="img-responsive"/>
+    </div>
+    <a href="#!" class="btn btn-large btn-info">
+        <i class="icon-home icon-white"></i>
+        Take Me Home
+    </a>
+</div>
