add an interesting comment from https://gist.github.com/edokeh/7580064

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,3 +1,26 @@
+<!--
+　　　　　　　　┏┓　　　┏┓+ +
+　　　　　　　┏┛┻━━━┛┻┓ + +
+　　　　　　　┃　　　　　　　┃ 　
+　　　　　　　┃　　　━　　　┃ ++ + + +
+　　　　　　 ████━████    ┃ +
+　　　　　　　┃　　　　　　　┃ +
+　　　　　　　┃　　　┻　　　┃
+　　　　　　　┃　　　　　　　┃ + +
+　　　　　　　┗━┓　　　┏━┛
+　　　　　　　　　┃　　　┃　　　　　　　　　　　
+　　　　　　　　　┃　　　┃ + + + +
+　　　　　　　　　┃　　　┃　　　　
+　　　　　　　　　┃　　　┃ + 　  This site is protected by the monster.
+　　　　　　　　　┃　　　┃                FUCK OFF! BUGS!
+　　　　　　　　　┃　　　┃　　+　　　　　　　　　
+　　　　　　　　　┃　 　　┗━━━┓ + +
+　　　　　　　　　┃ 　　　　　　　┣┓
+　　　　　　　　　┃ 　　　　　　　┏┛
+　　　　　　　　　┗┓┓┏━┳┓┏┛ + + + +
+　　　　　　　　　　┃┫┫　┃┫┫
+　　　　　　　　　　┗┻┛　┗┻┛+ + + +
+-->
 <!doctype html>
 <html ng-cloak ng-app="app" class="no-js">
 <head>
