--- a/src/client/index.html
+++ b/src/client/index.html
@@ -27,7 +27,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>just4fun</title>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <!--[if IE]>
     <script>
