--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -1,7 +1,7 @@
 ﻿<header class="navbar navbar-inverse" ng-controller="NavCtrl">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" ng-click="toggleCollapsibleMenu()">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -11,7 +11,7 @@
                 just4fun
             </a>
         </div>
-        <nav class="collapse navbar-collapse">
+        <nav class="collapse navbar-collapse" collapse="!_isNavDisplay">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: isPostActive()}">
                     <a href="/#!/posts">Posts</a>
