--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -16,6 +16,9 @@
                 <li ng-class="{active: isPostActive()}">
                     <a href="/#!/posts">Posts</a>
                 </li>
+                <li ng-class="{active: isActive('/guestbook')}">
+                    <a href="/#!/guestbook">Guestbook</a>
+                </li>
                 <li ng-class="{active: isActive('/about')}">
                     <a href="/#!/about">About</a>
                 </li>
