--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -46,6 +46,18 @@
         overflow: hidden;
         zoom: 1;
     }
+
+    .nav {
+        margin-bottom: 30px;
+    }
+    .comment-date {
+        margin-bottom: 10px;
+    }
+
+    .del-comment {
+        cursor: pointer;
+        color: red;
+    }
 </style>
 
 <ul class="breadcrumb">
@@ -60,7 +72,7 @@
     <p class="comment-tip">
         <i>Give me liberty, or give me death.</i>
     </p>
-    <ul class="nav nav-tabs" style="margin-bottom: 30px;">
+    <ul class="nav nav-tabs">
         <li class="active">
             <a href="javascript: void(0);">Comments({{comments.length}})</a>
         </li>
@@ -75,11 +87,12 @@
                     </p>
                 </div>
                 <div class="comment-right-area">
-                    <div class="pull-left comment-date" style="margin-bottom: 10px;">
+                    <div class="pull-left comment-date">
                         {{ comment.CreateDate | date:'yyyy-MM-dd HH:mm' }}
                     </div>
                     <div class="pull-right">
-                        #{{ $index + 1 }}
+                        <span class="del-comment" ng-show="_loginUser.Role == 'Admin'" ng-click="del(comment)">&times;</span>
+                        <span>#{{ $index + 1 }}</span>
                     </div>
                     <div class="clearfix"></div>
                     <p ng-bind-html="comment.Content | convertToHtmlLine">
