--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -18,6 +18,7 @@
     }
     hr {
         border-top: 1px solid #f5f5f5;
+        margin-top: 0;
     }
 
     .comment-logo {
@@ -74,7 +75,7 @@
     </p>
     <ul class="nav nav-tabs">
         <li class="active">
-            <a href="javascript: void(0);">Comments({{comments.length}})</a>
+            <a href="javascript: void(0);">Comments ({{comments.length}})</a>
         </li>
     </ul>
     <div class="col-md-offset-2 col-md-8">
@@ -109,28 +110,44 @@
 
         <hr />
 
-        <form name="form" ng-submit="publish()">
+        <form name="form" novalidate ng-submit="publish()">
             <div class="form-group">
                 <label class="control-label">Name</label>
                 <div>
-                    <input class="form-control" type="text" placeholder="Your name..." ng-model="entity.Author" required>
+                    <input class="form-control" name="author" type="text" placeholder="Your name..." ng-model="entity.Author"
+                            ng-minlength="2" ng-maxlength="10" required>
+                    <div class="label label-danger label-invalid" ng-show="form.author.$invalid && submitted">
+                        <span ng-show="form.author.$error.required">Author is required.</span>
+                        <span ng-show="form.author.$error.minlength">Author is required to be at least 2 characters.</span>
+                        <span ng-show="form.author.$error.maxlength">Author can't be longer than 10 characters.</span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label">Email</label>
                 <div>
-                    <input class="form-control" type="text" placeholder="Your email..." ng-model="entity.Email" required>
+                    <input class="form-control" name="email" type="email" placeholder="Your email..." ng-model="entity.Email"
+                            ng-minlength="5" ng-maxlength="40" required>
+                    <div class="label label-danger label-invalid" ng-show="form.email.$invalid && submitted">
+                        <span ng-show="form.email.$error.required">Email is required.</span>
+                        <span ng-show="form.email.$error.email">Email is invalid.</span>
+                        <span ng-show="form.email.$error.minlength">Email is required to be at least 5 characters.</span>
+                        <span ng-show="form.email.$error.maxlength">Email can't be longer than 40 characters.</span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label">Comment</label>
                 <div>
-                    <textarea class="form-control" placeholder="Your comment..." ng-model="entity.Content"
+                    <textarea class="form-control" name="content" placeholder="Your comment..." ng-model="entity.Content"
                             style="resize: none; height: 200px;" required></textarea>
+                    <div class="label label-danger label-invalid" ng-show="form.content.$invalid && submitted">
+                        <span ng-show="form.content.$error.required">Content is required.</span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" ng-disabled="loading || form.$invalid">Submit</button>
+                <button class="btn btn-primary" ng-disabled="loading">Submit</button>
             </div>
         </form>
     </div>
