fix a little issue in css

--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -48,7 +48,7 @@
         zoom: 1;
     }
 
-    .nav {
+    #comment-top {
         margin-bottom: 30px;
     }
     .comment-date {
@@ -73,7 +73,7 @@
     <p class="comment-tip">
         <i>Give me liberty, or give me death.</i>
     </p>
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs" id="comment-top">
         <li class="active">
             <a href="javascript: void(0);">Comments ({{comments.length}})</a>
         </li>
