fix several issues when visit site via handheld

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -41,12 +41,12 @@
         <div ng-include="'shared/header.html'"></div>
         <div class="container" id="container">
             <div class="content">
-                <div ng-view></div>
+                <div ng-view class="break"></div>
             </div>
         </div>
         <footer>
             Copyright © 2014 <a href="http://coffeeholic.me" target="_blank">Coffeeholic</a>,
-            Powered by
+            Inspired by
             <a href="http://meanjs.org/" target="_blank">MEAN.JS</a>
         </footer>
     </div>
