--- a/src/client/index.html
+++ b/src/client/index.html
@@ -50,8 +50,8 @@
             <a href="http://meanjs.org/" target="_blank">MEAN.JS</a>
         </footer>
     </div>
-    <div id="scrollTop" style="display: none; top: 95%;">
-        <div class="level-2" style="opacity: 0;">
+    <div id="scrollTop">
+        <div class="level-2">
         </div>
         <div class="level-3">
         </div>
