--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -13,7 +13,8 @@
         color: #428bca;
     }
     .nav-tabs > li.active > a,
-    .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    .nav-tabs > li.active > a:hover,
+    .nav-tabs > li.active > a:focus {
         background-color: #eee;
     }
     hr {
