--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Admin - just4fun</title>
+    <title ng-bind="title + ' &lsaquo; Console &lsaquo; just4fun'">Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
@@ -15,7 +15,7 @@
             <a class="navbar-brand" href="#!/">
                 <small>
                     <img src="/img/logo.jpg"/>
-                    Admin Console
+                    User Console
                 </small>
             </a>
         </div>
