--- a/src/client/admin/admin-login.html
+++ b/src/client/admin/admin-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Admin - Login</title>
+    <title>Log In &lsaquo; just4fun</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
@@ -12,7 +12,7 @@
 <div class="container" id="login-block">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-            <h3>Admin Console</h3>
+            <h3>User Console</h3>
             <div class="login-box clearfix">
                 <div class="login-logo">
                     <a href="#"><img src="/img/icon_self.jpg"></a>
