--- a/src/client/admin/modules/404/index.html
+++ b/src/client/admin/modules/404/index.html
@@ -1,19 +1,12 @@
 <style>
-    .center {
-        text-align: center;
-    }
-    .center > div {
-        margin-bottom: 20px;
-    }
-    .img-responsive {
-        margin: 0 auto;
+    .text-center > img {
+        display: block;
+        margin: 0 auto 20px;
     }
 </style>
 
-<div class="center">
-    <div>
-        <img src="/img/404.jpg" class="img-responsive"/>
-    </div>
+<div class="text-center">
+    <img src="/img/404.jpg" class="img-responsive"/>
     <a href="#!" class="btn btn-large btn-info">
         <i class="icon-home icon-white"></i>
         Take Me Home
