--- a/src/client/index.html
+++ b/src/client/index.html
@@ -39,7 +39,7 @@
 <body>
     <div id="main-container">
         <div ng-include="'shared/header.html'"></div>
-        <div class="container" id="container">
+        <div class="container">
             <div class="content">
                 <div ng-view class="break"></div>
             </div>
@@ -63,7 +63,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-52990380-1', 'auto');
+        ga('create', 'UA-52990380-1', 'talent-is.me');
         //ga('send', 'pageview');
 
     </script>
