--- a/src/client/modules/404/index.html
+++ b/src/client/modules/404/index.html
@@ -1,32 +1,16 @@
 <style>
-    .navbar-inverse .navbar-brand,
-    .navbar-inverse .navbar-brand:hover,
-    .navbar-inverse .navbar-brand:focus ,
-    .navbar-inverse .navbar-nav > .active > a,
-    .navbar-inverse .navbar-nav > .active > a:hover,
-    .navbar-inverse .navbar-nav > .active > a:focus,
-    .navbar-inverse .navbar-nav > li > a:hover,
-    .navbar-inverse .navbar-nav > li > a:focus {
-        color: #428bca;
+    body {
+        background-color: #fff;
     }
 
-    .center {
-        text-align: center;
-    }
-
-    .center > div {
-        margin-bottom: 20px;
-    }
-
-    .img-responsive {
-        margin: 0 auto;
+    .text-center > img {
+        display: block;
+        margin: 0 auto 20px;
     }
 </style>
 
-<div class="center">
-    <div>
-        <img src="/img/404.jpg" class="img-responsive"/>
-    </div>
+<div class="text-center">
+    <img src="/img/404.jpg" class="img-responsive"/>
     <a href="#!" class="btn btn-large btn-info">
         <i class="icon-home icon-white"></i>
         Take Me Home
