--- a/src/client/modules/about/index.html
+++ b/src/client/modules/about/index.html
@@ -1,57 +1,3 @@
-<style>
-    body {
-        background-color: #eee;
-    }
-    .navbar-inverse .navbar-brand,
-    .navbar-inverse .navbar-brand:hover,
-    .navbar-inverse .navbar-brand:focus ,
-    .navbar-inverse .navbar-nav > .active > a,
-    .navbar-inverse .navbar-nav > .active > a:hover,
-    .navbar-inverse .navbar-nav > .active > a:focus,
-    .navbar-inverse .navbar-nav > li > a:hover,
-    .navbar-inverse .navbar-nav > li > a:focus {
-        color: #428bca;
-    }
-    hr {
-        border-top: 1px solid #f5f5f5;
-        margin-top: 0;
-    }
-
-    blockquote {
-        margin: 20px 0;
-    }
-    blockquote p {
-        font-size: 14px;
-    }
-
-    .icon-3 {
-        font-size: 3em;
-    }
-    .social-media a {
-        text-decoration: none;
-        margin-left: 8px;
-        color: black;
-    }
-    .social-media a i:hover {
-        text-align: center;
-        -webkit-transition: 1s;
-        -moz-transition: 1s;
-        transition: 1s;
-    }
-    .icon-facebook-sign:hover {
-        color: #3b5998;
-    }
-    .icon-twitter:hover {
-        color: #00a0d1;
-    }
-    .icon-weibo:hover {
-        color: red;
-    }
-    .icon-instagram:hover {
-        color: #4E433C;
-    }
-</style>
-
 <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li class="active">About</li>
@@ -62,7 +8,9 @@
         <img src="/img/marathon_md.jpg" class="img-responsive"/>
     </div>
     <blockquote style="border-left: 5px solid red;">
-        我活在世上，无非想要明白些道理，遇见些有趣的事。 ——王小波
+        <p>
+            我活在世上，无非想要明白些道理，遇见些有趣的事。 ——王小波
+        </p>
     </blockquote>
     <hr />
     <h3>关于我</h3>
@@ -71,9 +19,15 @@
             我是talent，26岁，目前是一名前端开发工程师。
         </p>
         <p>
-            我的业余爱好非常多，有些甚至常常让旁人感到惊讶。
+            业余时间里，我喜欢研究前端前沿技术。
         </p>
-        <p style="margin-top: 20px;">
+        <p>
+            除此之外，也有许多其他的爱好，有些甚至常常让旁人感到惊讶。
+        </p>
+        <p>
+            ......
+        </p>
+        <p>
             我喜欢跑步，热衷于参加各种大小马拉松比赛；
         </p>
         <p>
@@ -120,9 +74,10 @@
         <p>
             <a href="http://weibo.com/houritsunohikari" target="_blank"><i class="icon-weibo icon-3"></i></a>
             <a href="http://pinsta.me/houritsunohikari" target="_blank"><i class="icon-instagram icon-3"></i></a>
+            <a href="https://github.com/just4fun" target="_blank"><i class="icon-github icon-3"></i></a>
         </p>
         <p>
-            脸书跟推特很少发状态，但时常也会上去看看：
+            脸书跟推特很少发状态，但偶尔也会上去看看：
         </p>
         <p>
             <a href="https://www.facebook.com/houritsunohikari" target="_blank"><i class="icon-facebook-sign icon-3"></i></a>
