--- a/src/client/modules/home/index.html
+++ b/src/client/modules/home/index.html
@@ -6,4 +6,12 @@
         -webkit-background-size: cover;
         background-size: cover;
     }
+
+    .navbar-inverse .navbar-brand,
+    .navbar-inverse .navbar-brand:hover,
+    .navbar-inverse .navbar-brand:focus,
+    .navbar-inverse .navbar-nav > li > a:hover,
+    .navbar-inverse .navbar-nav > li > a:focus {
+        color: #fff;
+    }
 </style>
