--- a/src/client/shared/header.html
+++ b/src/client/shared/header.html
@@ -8,7 +8,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <img src="/img/logo.jpg"/>
-                just4fun
+                <span ng-bind="MEANING.SiteName"></span>
             </a>
         </div>
         <nav class="collapse navbar-collapse" collapse="!_isNavDisplay">
