--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,7 +26,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title ng-bind="title ? title + ' | just4fun' : 'just4fun'">Loading...</title>
+    <title ng-bind="title ? title + ' | ' + MEANING.SiteName : MEANING.SiteName">Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <!--[if IE]>
