--- a/src/client/admin/admin-index.html
+++ b/src/client/admin/admin-index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title ng-bind="title + ' &lsaquo; Console &lsaquo; ' + MEANING.SiteName">Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link ng-href="{{ MEANING.Favicon }}" rel="shortcut icon" type="image/x-icon">
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
 </head>
@@ -14,7 +15,7 @@
         <div class="navbar-header pull-left">
             <a class="navbar-brand" href="#!/">
                 <small>
-                    <img src="/img/logo.jpg"/>
+                    <img ng-src="{{ MEANING.SiteLogo }}" width="40px"/>
                     User Console
                 </small>
             </a>
