--- a/src/client/admin/admin-login.html
+++ b/src/client/admin/admin-login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title ng-bind="'Log In &lsaquo; ' + MEANING.SiteName">Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link ng-href="{{ MEANING.Favicon }}" rel="shortcut icon" type="image/x-icon">
     <!--STYLES--><!--STYLES END-->
     <!--SCRIPTS--><!--SCRIPTS END-->
 </head>
