--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,7 +28,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title ng-bind="title ? title + ' | ' + MEANING.SiteName : MEANING.SiteName">Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link ng-href="{{ MEANING.Favicon }}" rel="shortcut icon" type="image/x-icon">
     <!--[if IE]>
     <script>
         alert("You are using IE! Please change it to Chrome or Firefox!!");
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="/">
-                        <img src="/img/logo.jpg"/>
+                        <img ng-src="{{ MEANING.SiteLogo }}" width="40px"/>
                         <span ng-bind="MEANING.SiteName"></span>
                     </a>
                 </div>
@@ -81,9 +81,7 @@
             </div>
         </div>
         <footer>
-            Copyright © 2014 <a href="http://coffeeholic.me" target="_blank">Coffeeholic</a>,
-            Inspired by
-            <a href="http://meanjs.org/" target="_blank">MEAN.JS</a>
+            <span ng-bind-html="MEANING.Footer"></span>
         </footer>
     </div>
     <div id="scrollTop">
